adding response dto, (getting rid of the old one)